test/good/loops/init01.px

for _ in 1..2 do
    x: Int
    x += 4
    print x
