test/bad/loops/for20.px

for x in 0.1...0.2 by "0" do
    skip
